Fixing covariate profile hashing issue.